added more styling and animation to jumbo

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,22 @@
       crossorigin="anonymous"
     ></script>
 
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Martel&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Rambla:700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- animate CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
+    />
+
     <title>React App</title>
   </head>
   <body>
