--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,10 @@
       href="https://fonts.googleapis.com/css?family=Rambla:700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- animate CSS -->
     <link
