--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Rambla:700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Raleway&display=swap"
       rel="stylesheet"
     />
     <link
