--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="Jordan Smith Portfolio" content="Web Devloper Portfolio" />
 
-    <meta property="og:image" content="public/images/PortfolioSplashPage.png" />
+    <meta property="og:image" content="./images/PortfolioSplashPage.png" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -55,6 +55,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
